# growbies

./: .coveragerc  .gitignore  .gitmodules  Makefile  README.md  compile_and_upload.sh  requirements.txt  run_ftests.sh  run_tests.sh  setup.cfg
2025-02-14T164143Z-emey/: data.csv
archive/growbies/exec/: __main__.py  execute.py
archive/growbies/monitor/: __init__.py  __main__.py  monitor.py
archive/tesseract/: version1_utils.py
archive/tests/monitor/: test_monitor.py
arduino/: arduino.ino
arduino/velostat/: compile_and_upload.sh  velostat.ino
build_lib/: export_paths.py  generate_build_cfg.py  set_version.py
build_lib/build_cfg/: __init__.py  __main__.py  common.py  firmware.py  gateway.py
db/: init.sh
docs/: Makefile
docs/source/: 4xfullbridge.rst  conf.py  index.rst  velostat.rst
endpoint/arduino/: Makefile  platformio.ini
endpoint/arduino/HX711/: .gitignore  Makefile  platformio.ini  setup.cfg
endpoint/arduino/HX711/src/: HX711.cpp  HX711.h  command.h  constants.h  growbies.cpp  growbies.h  main.ino
endpoint/arduino/HX711/src/protocol/: network.h
endpoint/arduino/HX711/src/utils/: sort.h
endpoint/arduino/growbies/: Makefile  platformio.ini
endpoint/arduino/src/: HX711.cpp  HX711.h  command.h  constants.h  defines.h  eeprom.h  flags.h  growbies.cpp  growbies.h  main.ino
firmware/: Makefile  README.md  platformio.ini  pre.py  sdkconfig.defaults  sdkconfig.esp32c3
firmware/include/: build_cfg.h  constants.h  flags.h  types.h
firmware/lib/: build_cfg.h
firmware/lib/buttons/: buttons.cpp  buttons.h
firmware/lib/display/: display.cpp  display.h  drawing.cpp  drawing.h
firmware/lib/led/: led.h
firmware/src/: README  main.cpp  system_state.h  task.cpp  task.h
ftests/: test_construction.py
gateway/: README.md
gateway/deb/: Containerfile  Makefile  build.sh
gateway/src/: __main__.py
growbies/: __init__.py  __main__.py  build_cfg.py  constants.py  env.py
growbies/arduino/: __init__.py  arduino.py  arduino_slip.py  base.py  datalink.py  network.py  slip.py  structs.py  test_structs.py  transport.py
growbies/cfg/: __init__.py  __main__.py  cfg.py
growbies/cli/: activate.py  calibration.py  common.py  device.py  identify.py  loopback.py  project.py  read.py  session.py  tag.py  tare.py  user.py
growbies/common/: enum.py
growbies/db/: __init__.py  __main__.py  constants.py  engine.py  init.py  init_db_and_user.py  init_tables.py  intf.py
growbies/device/: __init__.py  __main__.py  activate.py  cmd.py  discovery.py  resp.py
growbies/exec/: __main__.py
growbies/human_input/: .human_input.py.swp  __init__.py  __main__.py  human_input.py
growbies/intf/: __init__.py  base.py  datalink.py  intf.py  network.py  slip.py  transport.py
growbies/monitor/: __main__.py  monitor.py
growbies/plot/: __init__.py  __main__.py  plot.py
growbies/protocol/: cmd.py  resp.py
growbies/sample/: __init__.py  __main__.py  sample.py
growbies/service/: __init__.py  __main__.py  common.py  queue.py  serials_to_devices.py  service.py  utils.py
growbies/session/: __init__.py  log.py  session.py
growbies/utils/: bufstr.py  crc.py  ctypes_utils.py  environment.py  filelock.py  firmware.py  ftdi.py  paths.py  privileges.py  report.py  subprocess_utils.py  temperature.py  timestamp.py  types.py
growbies/worker/: pool.py  slip.py  worker.py
output.bak/2024-12-27T02:44:45.780644Z-single_purple_lettuce_in_grow_box/: notes.txt
pkg/: README.md
pkg/bash_src/: growbies  init.sh
pkg/deb/: Containerfile  Makefile
precision_farming/: __init__.py  __main__.py  main.py
precision_farming/arduino/: arduino.py
precision_farming/exec/: __init__.py  execute.py  monitor.py  plot.py
precision_farming/monitor/: __main__.py  monitor.py
precision_farming/plot/: __main__.py  plot.py
precision_farming/session/: log.py  session.py
precision_farming/utils/: log.py  paths.py
tesseract/: README.md  test_compare.py  utils.py  version1_utils.py  version2_utils.py
tests/: test_version.py
tests/arduino/: base.py  test_arduino_slip.py  test_datalink.py  test_network.py
tests/device/: test_calibration.py  test_cmd.py  test_datapoint.py  test_identify.py  test_tare.py
tests/exec/: test_monitor.py
tests/monitor/: __init__.py  test_monitor.py
tests/utils/: test_report.py
(+335 files in other folders)
