[metadata]
name = growbies
version = attr: growbies.__version__
description = A feedback-control, based on networks of things and machine learning, for agriculture.
long_description = file: README.md
long_description_content_type = t\xt/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
    = .
packages = find:
python_requires = >=3.11
include_package_data = True
install_requires =

[options.extras_require]
ALL =
    %(BUILD)s
    %(DOCS)s
    %(GATEWAY)s
    %(GUI)s
    %(TESTS)s
    %(TRAINING)s
    %(WORKER)s

BUILD =
    build
    setuptools
    wheel

DOCS =
    sphinx
    sphinx-rtd-theme
    sphinx-rtd-dark-mode

GUI =
    matplotlib

GATEWAY =

TESTS =
    coverage    # Code coverage reporting

TRAINING =
    pillow
    pytesseract

WORKER =
    pyserial

[options.packages.find]
exclude =
    tests*
