[metadata]
name = growbies
version = attr: growbies.__version__
description = A feedback-control, based on networks of things and machine learning, for agriculture.
long_description = file: README.md
long_description_content_type = t\xt/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
    = .
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    inotify-simple      # Inotify events
    packaging           # Version support
    prettytable         # Formatted tables
    psycopg2-binary     # Interface to postgres
    pydantic            # meta-language modeling
    pyserial            # Interface to serial port
    pyyaml              # YAML support
    sqlmodel            # SQL database interface

[options.extras_require]
ALL =
    %(BUILD)s
    %(DOCS)s
    %(GUI)s
    %(TESTS)s

BUILD =
    build
    setuptools
    wheel

DOCS =
    sphinx                  # Documentation framework
    sphinx-rtd-dark-mode    # Documentation framework addon theme

FIRMWARE =
    platformio  # Firmware build framework

GUI =
    matplotlib  # Plotting

TESTS =
    coverage    # Code coverage reporting

[options.packages.find]
exclude =
    tests*

[options.package_data]
growbies.db.sql = *.sql