[metadata]
name = growbies
version = attr: growbies.__version__
description = A feedback-control, based on networks of things and machine learning, for agriculture.
long_description = file: README.md
long_description_content_type = t\xt/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
    = .
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    argcomplete         # Command line tab completion
    inotify-simple      # Inotify events
    matplotlib          # plotting
    numpy<2.4           # See https://github.com/numpy/numpy/issues/30492 for illegal instruction
                        # installation bug in numpy 2.4.0 . Note, matplotlib depends on numpy.
    packaging           # Version support
    prettytable         # Formatted tables
    psycopg2-binary     # Interface to postgres
    pyserial            # Interface to serial port
    sqlmodel            # SQL database interface

[options.extras_require]
ALL =
    %(BUILD)s
    %(DOCS)s
    %(TESTS)s

BUILD =
    build
    setuptools
    wheel

DOCS =
    sphinx                  # Documentation framework
    sphinx-rtd-dark-mode    # Documentation framework addon theme


TESTS =
    coverage    # Code coverage reporting

[options.packages.find]
exclude =
    tests*

[options.package_data]
growbies.db.sql = *.sql