[metadata]
name = HX711
description = An Arduino library to interface the Avia Semiconductor HX711 24-Bit Analog-to-Digital
    Converter (ADC) for reading load cells / weight scales.
long_description = file: README.md
long_description_content_type = t\xt/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    platformio
